[package]
name = "unpack"
version = "0.0.1"
edition = "2021"
authors = [ "Alvaro Gaona <alvgaona@gmail.com>" ]
repository = "https://github.com/alvgaona/calibrator-workers"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.3.4", features = ["queue"] }
worker-macros = { version="0.3.4" }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.210", features = ["derive"] }
tar = "0.4.41"
flate2 = "1.0.33"
